Bug 433095 - Baloo indexing .swp files
Summary: Baloo indexing .swp files
Status: RESOLVED FIXED
Alias: None
Product: frameworks-baloo
Classification: Frameworks and Libraries
Component: Baloo File Daemon (other bugs)
Version First Reported In: 5.79.0
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Stefan Brüns
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-17 17:28 UTC by tagwerk19
Modified: 2021-02-17 19:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.80
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tagwerk19 2021-02-17 17:28:00 UTC
SUMMARY:

    If Baloo is configured to index hidden files, it will repeatedly
    indexes the 'vim' temporary file (of the format .filename.swp) 

STEPS TO REPRODUCE:

    Configure baloo to index hidden files

        balooctl config set hidden true

    and run

        balooctl monitor

    in a second window, find a large text file, open with 'vi', wander
    round, change things but don't save the file.

OBSERVED RESULTS

    While editing the file, notice that the .swp file repeated appears
    in the balooctl monitor output

EXPECTED RESULTS

    Would not expect baloo to index the file contents, it is probably
    overkill... (and a .testfile.swp is binary, or at least not text/plain) 

ADDITIONAL INFORMATION

    Appending

        .*.swp

    to the "exclude filters" list stops the content indexing (but also
    the filename indexing...). Perhaps this should be added to the default
    exclusions

    As a "wishlist thing", it would be nice to be able to limit the
    content indexing independently from the filename/metadata indexing.
    Following some of the other Bugzilla threads, it seems this is
    possible with "exclude mimetypes" rather than "exclude filters" but
    I somehow wonder if that is accidental... 

SYSTEM INFORMATION

    Neon Testing
    Plasma : 5.21.0
    Frameworks : 5.80.0
    Qt : 5.15.2
Comment 1 Nate Graham 2021-02-17 19:13:35 UTC
Git commit 95f3290e43bdf1124122320eacd510aa8803020c by Nate Graham.
Committed on 17/02/2021 at 19:12.
Pushed by ngraham into branch 'master'.

Don't try to index .swp files
FIXED-IN: 5.80

M  +2    -1    src/file/fileexcludefilters.cpp

https://invent.kde.org/frameworks/baloo/commit/95f3290e43bdf1124122320eacd510aa8803020c