Don't try to index .swp files

BUG: 433095
FIXED-IN: 5.80